# citron-emu-mirror

./: .gitlab-ci.yml  .gitmodules  CMakeLists.txt  README.md  vcpkg.json
CMakeModules/: CopyCitronQt6Deps.cmake  DownloadExternals.cmake  GenerateSCMRev.cmake  PGO.cmake
patches/: discord-rpc-wclass-memaccess-fix.patch
src/android/: build.gradle.kts
src/android/app/: build.gradle.kts
src/audio_core/: CMakeLists.txt
src/audio_core/common/: feature_support.h
src/audio_core/renderer/: system.cpp
src/audio_core/sink/: cubeb_sink.cpp  sink_stream.cpp
src/citron/: CMakeLists.txt  about_dialog.cpp  aboutdialog.ui  bootmanager.cpp  bootmanager.h  citron.qrc  controller_overlay.cpp  controller_overlay.h  discord_impl.cpp  discord_impl.h  game_list.cpp  game_list.h  game_list_p.h  game_list_worker.cpp  game_list_worker.h  hotkeys.cpp  loading_screen.cpp  loading_screen.h  main.cpp  main.h  main.ui  setup_wizard.cpp  setup_wizard.h  setup_wizard.ui  uisettings.cpp  uisettings.h
src/citron/applets/: qt_controller.cpp  qt_web_browser.cpp
src/citron/configuration/: configure.ui  configure_audio.cpp  configure_audio.h  configure_cpu.cpp  configure_cpu.h  configure_debug.cpp  configure_dialog.cpp  configure_dialog.h  configure_filesystem.cpp  configure_filesystem.h  configure_filesystem.ui  configure_general.cpp  configure_graphics.cpp  configure_graphics.h  configure_graphics_advanced.cpp  configure_graphics_advanced.h  configure_hotkeys.cpp  configure_input.cpp  configure_input.ui  configure_input_advanced.cpp  configure_input_player.cpp  configure_input_player.ui  configure_input_player_widget.cpp  configure_input_player_widget.h  configure_motion_touch.cpp  configure_mouse_panning.cpp  configure_network.cpp  configure_network.h  configure_network.ui  configure_per_game.cpp  configure_per_game.h  configure_per_game.ui  configure_per_game_addons.cpp  configure_per_game_addons.h  configure_per_game_addons.ui  configure_profile_manager.cpp  configure_system.cpp  configure_system.h  configure_touch_from_button.cpp  configure_ui.cpp  (+9 more)
src/citron/mod_manager/: mod_downloader_dialog.cpp  mod_downloader_dialog.h  mod_downloader_dialog.ui  mod_service.cpp  mod_service.h
src/citron/multiplayer/: chat_room.cpp  chat_room.h  chat_room.ui  client_room.h  direct_connect.cpp  host_room.cpp  lobby.cpp  state.cpp
src/citron/updater/: updater_dialog.cpp  updater_dialog.h  updater_dialog.ui  updater_service.cpp  updater_service.h
src/citron/util/: controller_navigation.cpp  multiplayer_room_overlay.cpp  multiplayer_room_overlay.h  performance_overlay.cpp  performance_overlay.h  rainbow_style.cpp  rainbow_style.h  vram_overlay.cpp  vram_overlay.h
src/citron_cmd/: CMakeLists.txt
src/citron_cmd/emu_window/: emu_window_sdl2.cpp  emu_window_sdl2.h
src/common/: CMakeLists.txt  host_memory.cpp  host_memory.h  ring_buffer.h  settings.cpp  settings.h  settings_enums.h  zstd_compression.cpp
src/common/fs/: fs.cpp  fs.h  path_util.cpp
src/core/: CMakeLists.txt  core.cpp  memory.cpp  perf_stats.cpp  reporter.cpp  telemetry_session.cpp
src/core/arm/: arm_interface.cpp
src/core/debugger/: debugger.cpp
src/core/file_sys/: directory_save_data_filesystem.cpp  directory_save_data_filesystem.h  patch_manager.cpp  registered_cache.h  savedata_factory.cpp  savedata_factory.h
src/core/hle/: api_version.h  result.h
src/core/internal_network/: network.cpp  network_interface.cpp  socket_proxy.cpp  socket_proxy.h
src/dedicated_room/: CMakeLists.txt
src/frontend_common/: config.cpp  config.h
src/hid_core/: CMakeLists.txt
src/hid_core/frontend/: emulated_controller.cpp  emulated_controller.h  emulated_devices.h
src/input_common/: CMakeLists.txt
src/network/: CMakeLists.txt  announce_multiplayer_session.cpp  room.cpp  room_member.cpp  room_member.h
src/shader_recompiler/: CMakeLists.txt  environment.h  profile.h  runtime_info.h  shader_info.h
src/shader_recompiler/ir_opt/: global_memory_to_storage_buffer_pass.cpp  lower_int64_to_int32.cpp  texture_pass.cpp
src/video_core/: CMakeLists.txt  cdma_pusher.cpp  dma_pusher.cpp  shader_environment.cpp  shader_environment.h  surface.cpp  surface.h
src/video_core/buffer_cache/: buffer_cache.h  buffer_cache_base.h
src/video_core/host1x/: vic.cpp
src/video_core/host_shaders/: CMakeLists.txt  block_linear_unswizzle_3d_bcn.comp  present_lanczos.frag  vulkan_crt_easymode.frag  vulkan_frame_generation_frag_spv.h  vulkan_frame_generation_vert_spv.h
src/video_core/renderer_opengl/: gl_blit_screen.cpp  gl_shader_cache.cpp  gl_texture_cache.h
src/video_core/renderer_vulkan/: maxwell_to_vk.cpp  maxwell_to_vk.h  renderer_vulkan.cpp  vk_blit_screen.cpp  vk_buffer_cache.cpp  vk_buffer_cache.h  vk_graphics_pipeline.cpp  vk_pipeline_cache.cpp  vk_pipeline_cache.h  vk_query_cache.cpp  vk_rasterizer.cpp  vk_rasterizer.h  vk_scheduler.cpp  vk_staging_buffer_pool.cpp  vk_staging_buffer_pool.h  vk_swapchain.cpp  vk_texture_cache.cpp  vk_texture_cache.h  vk_turbo_mode.cpp
src/video_core/texture_cache/: format_lookup_table.cpp  formatter.h  image_base.cpp  util.cpp  (+3 more)
src/web_service/: CMakeLists.txt  web_backend.cpp
(+204 files in other folders)
